melior/src/dialect/snapshots/melior__dialect__enzyme__tests__compile_autodiff.snap
---
source: melior/src/dialect/enzyme.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f64, %arg1: f64) -> f64 {
    %0 = "enzyme.autodiff"(%arg0, %arg1) {activity = [#enzyme<activity enzyme_dup>], fn = @square, ret_activity = [#enzyme<activity enzyme_activenoneed>], strong_zero = false, width = 1 : i64} : (f64, f64) -> f64
    return %0 : f64
  }
}
